--- a/APM/app/patient/addEditPatient.html
+++ b/APM/app/patient/addEditPatient.html
@@ -1,27 +1,6 @@
 <div [formGroup]="addPatientForm" (ngSubmit)="postPatient(addPatientForm.value)">
-    <input formControlName="firstName"/>
-    <input formControlName="lastName"/>
-    <input type="submit" value="Submit" (click)="addNewPatient(addPatientForm.value)"/>
-
-    
-</div>
-<div>
-    <table>
-        <thead>
-            <tr>
-                <th>FirstName</th>
-                <th>LastName</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr *ngFor="let pat of patients">
-                <td>
-                    {{ pat.FirstName }}
-                </td>
-                <td>
-                    {{ pat.LastName }}
-                </td>
-            </tr>
-        </tbody>
-    </table>
+    <input [value]="selectedPatient?.FirstName" formControlName="firstName" />
+    <input [value]="selectedPatient?.LastName" formControlName="lastName" />
+    <input type="button" [ngClass]='{hideClass: isUpdateStyle}'  value="Add" (click)="addNewPatient(addPatientForm.value)" />
+    <input type="button" [class.hideClass]="!isUpdateStyle"  value="Update" (click)="updatePatient(addPatientForm.value)" />
 </div>
