--- a/APM/app/patient/addEditPatient.html
+++ b/APM/app/patient/addEditPatient.html
@@ -1,6 +1,51 @@
-<div [formGroup]="addPatientForm" (ngSubmit)="postPatient(addPatientForm.value)">
-    <input [value]="selectedPatient?.FirstName" formControlName="firstName" />
-    <input [value]="selectedPatient?.LastName" formControlName="lastName" />
-    <input type="button" [ngClass]='{hideClass: isUpdateStyle}'  value="Add" (click)="addNewPatient(addPatientForm.value)" />
-    <input type="button" [class.hideClass]="!isUpdateStyle"  value="Update" (click)="updatePatient(addPatientForm.value)" />
+
+<div class="container" [formGroup]="addPatientForm" (ngSubmit)="postPatient(addPatientForm.value)">
+    <div class="col-md-6" id="patInfoAcc">
+        <div (click)="accordionCollapse()">
+            <h4>Patient Information</h4>
+        </div>
+        <div [class.accordionHide]="this.accordionHide">
+            <div>
+                <label for="firstName">First name</label>
+                <input id="firstName" class="form-control" formControlName="firstName" required />
+                <div *ngIf="firstName.invalid && (firstName.dirty || firstName.touched)"
+                     class="alert alert-danger">
+                    <div *ngIf="firstName.errors.required">
+                        Name is required.
+                    </div>
+                    <div *ngIf="firstName.errors.minlength">
+                        Name must be at least 2 characters long.
+                    </div>
+                </div>
+            </div>
+            <div>
+                <label for="lastName">Last Name</label>
+                <input id="lastName" class="form-control" formControlName="lastName" />
+            </div>
+        </div>
+
+    </div>
+    <div class="col-md-6">
+        <div>
+            <label for="firstName">First name</label>
+            <input id="firstName" class="form-control" formControlName="firstName" required />
+            <div *ngIf="firstName.invalid && (firstName.dirty || firstName.touched)"
+                 class="alert alert-danger">
+                <div *ngIf="firstName.errors.required">
+                    Name is required.
+                </div>
+                <div *ngIf="firstName.errors.minlength">
+                    Name must be at least 2 characters long.
+                </div>
+            </div>
+        </div>
+        <div>
+            <label for="lastName">Last Name</label>
+            <input id="lastName" class="form-control" formControlName="lastName" />
+        </div>
+    </div>
+
+    <input type="button" [ngClass]='{hideClass: isUpdateStyle}' value="Add" (click)="addNewPatient(addPatientForm.value)" />
+    <input type="button" [class.hideClass]="!isUpdateStyle" value="Update" (click)="updatePatient(addPatientForm.value)" />
 </div>
+<p>Validation status: {{ addPatientForm.status }}</p>
